# Freenove-robot-dog-software-rewrite

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.MD  TODO.MD  build.sh  install.sh  robot-server.service
.github/workflows/: build.yml
bonus/models/: DogLegReplacement.FCStd  motorattachment.FCStd
robot-src/: CMakeLists.txt  Toolchain-RaspberryPi.cmake  main.cxx
robot-src/libraries/: smbus.c  smbus.h
robot-src/libraries/MPU6050/: MPU6050.cpp  README.md  smbus.c
robot-src/libraries/PCA9685/: PCA9685.cxx  PCA9685.h
robot-src/libraries/Sonar/: sonar.cxx  sonar.h
robot-src/movement/: movement.cxx  movement.h
